Module/Unstuck: Clean codefactor issue

--- a/application/modules/unstuck/css/unstuck.css
+++ b/application/modules/unstuck/css/unstuck.css
@@ -1,6 +1,6 @@
 .page-desc-holder {
     padding: 0;
-    margin: 0 auto 35px auto;
+    margin: 0 auto 35px;
     text-shadow: 0 1px 1px #000000;
     font-size: 17px;
     font-weight: 400;
